// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen hosts config import-export] should create the hosts: the hosts have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ host => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen hosts config import-export] should throw exception when new hosts to import miss mandatory properties hosts: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
	Mandatory properties [lcaPort, osInfo, type] not set in host 'cfgObjectTest'
",
  "stdout": "",
}
`;

exports[`[mutagen hosts config import-export] should update the modified hosts: the modified hosts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ host => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen hosts config import-export] should update the same hosts: the hosts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ host => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
